[package]
name = "helloworld"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = {version = "2.0.1", features = ["alloc"] }
clap = { version = "4.5.43", features = ["derive"] }
rand = "0.9.2"
serde = {version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }


